New project, NuGet, and modified DynamoDb, Userpool, Billing Controllers

--- a/CA2_Talents_Webapp/appsettings.json
+++ b/CA2_Talents_Webapp/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Region": "ap-southeast-1",
+    "AccessKey": "AKIA3NZC5HSK53VQOUXU",
+    "SecretKey": "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"
+  }
 }
