added Standard Main page  and Standard Talent page

--- a/CA2_Talents_Webapp/appsettings.json
+++ b/CA2_Talents_Webapp/appsettings.json
@@ -7,8 +7,8 @@
   "AllowedHosts": "*",
   "AWS": {
     "Region": "ap-southeast-1",
-    "AccessKey": "AKIA3NZC5HSK53VQOUXU",
-    "SecretKey": "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"
+    "AccessKey": "AKIA3NZC5HSKVMK5BMRE",
+    "SecretKey": "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"
   },
   "GoogleBigQuery": {
     "type": "service_account",
