SQLDatabase - all methods

--- a/CA2_Talents_Webapp/appsettings.json
+++ b/CA2_Talents_Webapp/appsettings.json
@@ -11,6 +11,6 @@
     "SecretKey": "zZc6SKR8xkMyMR8W1O3EYZUf1Jz2yhUXmDJ3/f2d"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=talentdb-2.cj4ksvdjvoxi.ap-southeast-1.rds.amazonaws.com;Database=talentdb-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyConnStr": "Server=talentdb-2.cj4ksvdjvoxi.ap-southeast-1.rds.amazonaws.com; Database=talentdb; User Id=admin; Password=12345678; Trusted_Connection=False;MultipleActiveResultSets=true"
   }
 }
