--- a/CA2_Talents_Webapp/CA2_Talents_Webapp.csproj
+++ b/CA2_Talents_Webapp/CA2_Talents_Webapp.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="jquery.noty" Version="2.3.5" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0-preview8-19413-06" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
     <PackageReference Include="Stripe.net" Version="37.26.0" />
     <PackageReference Include="toastr" Version="2.1.1" />
   </ItemGroup>
