--- a/CA2_Talents_Webapp/CA2_Talents_Webapp.csproj
+++ b/CA2_Talents_Webapp/CA2_Talents_Webapp.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Google.Cloud.BigQuery.V2" Version="2.0.0" /> 
 	<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.106.28" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
+    <PackageReference Include="Google.Cloud.Vision.V1" Version="2.0.0" />
     <PackageReference Include="jquery.noty" Version="2.3.5" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
@@ -27,6 +28,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DynamoDb.libs\DynamoDb.libs.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
   </ItemGroup>
 
 </Project>
