--- a/CA2_Talents_Webapp/CA2_Talents_Webapp.csproj
+++ b/CA2_Talents_Webapp/CA2_Talents_Webapp.csproj
@@ -13,7 +13,8 @@
     <PackageReference Include="Amazon.Extensions.CognitoAuthentication" Version="1.0.4" />
     <PackageReference Include="AWSSDK.CognitoIdentity" Version="3.3.101.114" />
     <PackageReference Include="AWSSDK.CognitoIdentityProvider" Version="3.3.111.10" />
-    <PackageReference Include="AWSSDK.Core" Version="3.3.107.28" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.107.32" />
+    <PackageReference Include="AWSSDK.S3" Version="3.3.111.34" />
     <PackageReference Include="Google.Cloud.BigQuery.V2" Version="2.0.0" /> 
 	<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.106.28" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.3.101" />
